// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pickers BasePicker renders BasePicker correctly 1`] = `
<div
  className="ms-BasePicker"
  onKeyDown={[Function]}
>
  <div
    className="ms-FocusZone"
    data-focuszone-id="FocusZone1"
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDownCapture={[Function]}
    role="presentation"
  >
    <div
      className="ms-SelectionZone"
      onClick={[Function]}
      onContextMenu={[Function]}
      onDoubleClick={[Function]}
      onFocusCapture={[Function]}
      onKeyDown={[Function]}
      onKeyDownCapture={[Function]}
      onMouseDown={[Function]}
      onMouseDownCapture={[Function]}
      role="presentation"
    >
      <div
        className="ms-BasePicker-text"
      >
        <span
          id="selected-items-id__0"
          role="list"
        />
        <input
          aria-autocomplete="both"
          aria-controls=" "
          aria-describedby="selected-items-id__0"
          aria-expanded={false}
          aria-haspopup="true"
          autoCapitalize="off"
          autoComplete="off"
          className="ms-BasePicker-input"
          data-lpignore={true}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onCompositionEnd={[Function]}
          onCompositionStart={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          onKeyDown={[Function]}
          role="combobox"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Pickers BasePicker renders BasePicker with inputProps supply classnames correctly 1`] = `
<div
  className="ms-BasePicker"
  onKeyDown={[Function]}
>
  <div
    className="ms-FocusZone"
    data-focuszone-id="FocusZone1"
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDownCapture={[Function]}
    role="presentation"
  >
    <div
      className="ms-SelectionZone"
      onClick={[Function]}
      onContextMenu={[Function]}
      onDoubleClick={[Function]}
      onFocusCapture={[Function]}
      onKeyDown={[Function]}
      onKeyDownCapture={[Function]}
      onMouseDown={[Function]}
      onMouseDownCapture={[Function]}
      role="presentation"
    >
      <div
        className="ms-BasePicker-text"
      >
        <span
          id="selected-items-id__0"
          role="list"
        />
        <input
          aria-autocomplete="both"
          aria-controls=" "
          aria-describedby="selected-items-id__0"
          aria-expanded={false}
          aria-haspopup="true"
          autoCapitalize="off"
          autoComplete="off"
          className="ms-BasePicker-input testclass "
          data-lpignore={true}
          id="pckSelectedUser"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onCompositionEnd={[Function]}
          onCompositionStart={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          onKeyDown={[Function]}
          placeholder="Bitte einen Benutzer angeben..."
          role="combobox"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Pickers TagPicker renders TagPicker correctly 1`] = `
<div
  className="ms-BasePicker"
  onKeyDown={[Function]}
>
  <div
    className="ms-FocusZone"
    data-focuszone-id="FocusZone1"
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDownCapture={[Function]}
    role="presentation"
  >
    <div
      className="ms-SelectionZone"
      onClick={[Function]}
      onContextMenu={[Function]}
      onDoubleClick={[Function]}
      onFocusCapture={[Function]}
      onKeyDown={[Function]}
      onKeyDownCapture={[Function]}
      onMouseDown={[Function]}
      onMouseDownCapture={[Function]}
      role="presentation"
    >
      <div
        className="ms-BasePicker-text"
      >
        <span
          id="selected-items-id__0"
          role="list"
        />
        <input
          aria-autocomplete="both"
          aria-controls=" "
          aria-describedby="selected-items-id__0"
          aria-expanded={false}
          aria-haspopup="true"
          autoCapitalize="off"
          autoComplete="off"
          className="ms-BasePicker-input"
          data-lpignore={true}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onCompositionEnd={[Function]}
          onCompositionStart={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          onKeyDown={[Function]}
          role="combobox"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;
